--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   google_fonts: ^2.1.0
+  velocity_x: ^3.3.0
 
 dev_dependencies:
   flutter_lints: ^1.0.0
